Documentation content updates (#200)
* move front matter guide to the site

* dep upgrades

* new quickstart

* rename asset

* rename shell guide

* set up correct index pages

* simplify provider guides

* move provide protocol reference

* set up the correct provider protocol guides

* annotations

* quickstart updates

* add faq page

* snippets

* sidebar updates and add pagefind to include reference

* update urls to remove whitespace

* providers index page

* simplify config

* don't index api reference page (not ideal for consumption)

* remove old pagerduty guide pending updates

* set up correct webhook guides

* template guide updates

* sidebar

* format the jsonnet correctly

* add mermaid deps

* render mermaid diagrams inside of code blocks

* remove template

* update index page

* move the internal documentation where it belongs

* remove Development sidebar

* generate templates reference automatically from the libsonnet in the docs site itself

* remove in-source documentation

* formatting

* a few more renames and simplification

* update yarn lock

--- a/docs/src/pages/docs/reference/api/[tag].astro
+++ b/docs/src/pages/docs/reference/api/[tag].astro
@@ -15,7 +15,7 @@ export const getStaticPaths = (async () => {
 
   return schema.tags.map((tag) => {
     return {
-      params: { tag: tag.name.toLowerCase() },
+      params: { tag: tag.name.trim().toLowerCase().replace(/\s+/g, "-") },
       props: { tag },
     };
   });
