--- a/docs/src/pages/docs/reference/api/index.astro
+++ b/docs/src/pages/docs/reference/api/index.astro
@@ -9,7 +9,7 @@ if (schema === undefined) {
 }
 ---
 
-<StarlightPage frontmatter={{ title: "API Reference" }}>
+<StarlightPage frontmatter={{ title: "API Reference", pagefind: false }}>
   <CardGrid>
     {
       schema.tags &&
